--- a/Ant/pom.xml
+++ b/Ant/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.technophobia.substeps</groupId>
         <artifactId>substeps-runner-parent</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
+        <version>2.0.0-RB-SNAPSHOT</version>
     </parent>
 
     <name>SubSteps Ant Runner</name>
