--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.technophobia.substeps</groupId>
     <artifactId>substeps-runner-parent</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>2.0.0-RB-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <!-- for OSS hosting -->
@@ -16,13 +16,13 @@
     <modules>
       <module>Common</module>
       <module>Maven</module>
-      <module>Ant</module>
-      <module>Junit</module>
+      <module>Maven-Test</module>
+      <!--module>Ant</module-->
+      <!--module>Junit</module-->
     </modules>
 
     <properties>
-      <substeps.core.version>1.1.1</substeps.core.version>
-      <substeps.api.version>1.1.1</substeps.api.version>
+      <substeps.core.version>0.1-SNAPSHOT</substeps.core.version>
 
       <guava.version>10.0</guava.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -107,6 +107,22 @@
 		</contributor>
 	</contributors>
 
+  <repositories>
+    <repository>
+      <id>scala-tools.org</id>
+      <name>Scala-tools Maven2 Repository</name>
+      <url>http://scala-tools.org/repo-releases</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>scala-tools.org</id>
+      <name>Scala-tools Maven2 Repository</name>
+      <url>http://scala-tools.org/repo-releases</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+
     <dependencyManagement>
       <dependencies>
        
@@ -114,12 +130,6 @@
           <groupId>${project.groupId}</groupId>
           <artifactId>substeps-runner-common</artifactId>
           <version>${project.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>substeps-core</artifactId>
-          <version>${substeps.core.version}</version>
-          <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.mockito</groupId>
@@ -147,10 +157,17 @@
 
     <dependencies>
 
+
         <dependency>
-          <groupId>com.technophobia.substeps</groupId>
-          <artifactId>substeps-core-api</artifactId>
-          <version>${substeps.api.version}</version>
+          <groupId>org.scala-lang</groupId>
+          <artifactId>scala-library</artifactId>
+          <version>2.10.0</version>
+        </dependency>
+
+        <dependency>
+          <groupId>${project.groupId}</groupId>
+          <artifactId>substeps-scala-core</artifactId>
+          <version>${substeps.core.version}</version>
         </dependency>
 
         <dependency>
@@ -190,15 +207,7 @@
             <artifactId>annotations</artifactId>
             <version>1.3.2</version>
         </dependency> 
-	
 
-        <dependency>
-          <groupId>${project.groupId}</groupId>
-          <artifactId>substeps-core</artifactId>
-          <version>${substeps.core.version}</version>
-          <type>test-jar</type>
-          <scope>test</scope>
-        </dependency>     
     </dependencies>
 
     <build>
@@ -213,12 +222,33 @@
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
-                    <inherit>true</inherit>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
 
-            <plugin>
+
+          <plugin>
+            <groupId>org.scala-tools</groupId>
+            <artifactId>maven-scala-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>compile</goal>
+                  <goal>testCompile</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <sourceDir>src/main/scala</sourceDir>
+              <jvmArgs>
+                <jvmArg>-Xms64m</jvmArg>
+                <jvmArg>-Xmx1024m</jvmArg>
+              </jvmArgs>
+            </configuration>
+          </plugin>
+
+
+          <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.3.2</version>
@@ -229,41 +259,9 @@
                 </configuration>
 
             </plugin>
-            
+
+
         </plugins>
     </build>
 
-
-
-    <profiles>
-        
-	<!-- A profile used by default for internal dev, using the repos set up in proeprties defined above, rather than the OSS nexus repos -->    
-        <profile>
-            <id>internalDev</id>
-             
-            <distributionManagement>
-                <snapshotRepository>
-                    <id>${nexus.snapshot.artifacts}</id>
-                    <name>${nexus.snapshot.artifacts}</name>
-                    <url>${nexus.snapshot.url}</url>
-                    <uniqueVersion>false</uniqueVersion>
-                </snapshotRepository>
-                <repository>
-                    <id>${nexus.release.artifacts}</id>
-                    <name>${nexus.release.artifacts}</name>
-                    <url>${nexus.releases.url}</url>
-                </repository>
-            </distributionManagement>
-            
-        </profile>
-
-    </profiles>
-
-    <scm>
-        <connection>${substeps-runner.scm}</connection>
-        <developerConnection>${substeps-runner.scm}</developerConnection>
-        <url>${substeps-runner.scm.url}</url>
-      <tag>HEAD</tag>
-  </scm>
-   
 </project>
