Validation added using JSR 303, now failing on missing substep

--- a/Maven-Test/pom.xml
+++ b/Maven-Test/pom.xml
@@ -31,6 +31,16 @@
         </executions>
 
         <configuration>
+          <executionConfigs>
+            <executionConfig>
+              <description>My Substeps Execution</description>
+              <stepImplementationPackages>
+                <stepImplementationPackage>com.technophobia.substeps.runner.teststeps</stepImplementationPackage>
+              </stepImplementationPackages>
+              <featureFile>${basedir}/src/test/features</featureFile>
+              <subStepsFileName>${basedir}/src/test/substeps</subStepsFileName>
+            </executionConfig>
+          </executionConfigs>
         </configuration>
 
       </plugin>
