--- a/pom.xml
+++ b/pom.xml
@@ -215,25 +215,21 @@
         <finalName>${project.artifactId}</finalName>        
         <plugins>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-
-
           <plugin>
             <groupId>org.scala-tools</groupId>
             <artifactId>maven-scala-plugin</artifactId>
+            <version>2.15.2</version>
             <executions>
               <execution>
+                <id>compile</id>
                 <goals>
                   <goal>compile</goal>
+                </goals>
+                <phase>process-sources</phase>
+              </execution>
+              <execution>
+                <id>testCompile</id>
+                <goals>
                   <goal>testCompile</goal>
                 </goals>
               </execution>
@@ -246,6 +242,19 @@
               </jvmArgs>
             </configuration>
           </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+
+
 
 
           <plugin>
