--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,14 @@
         <version>7</version>
     </parent>
 
+    <licenses>
+        <license>
+            <name>LGPL 3.0 license</name>
+            <url>http://www.opensource.org/licenses/lgpl-3.0.html</url>
+            <distribution>manual</distribution>
+      </license>
+    </licenses>
+
     <modules>
       <module>Common</module>
       <module>Maven</module>
