--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
     </modules>
 
     <properties>
-      <substeps.core.version>1.1.3-SNAPSHOT</substeps.core.version>
-      <substeps.api.version>1.1.3-SNAPSHOT</substeps.api.version>
+      <substeps.core.version>1.1.3</substeps.core.version>
+      <substeps.api.version>1.1.3</substeps.api.version>
 
       <guava.version>10.0</guava.version>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -31,7 +31,7 @@
     </properties>
 
     <name>SubSteps Runner Parent</name>
-    
+
     <description>Contains substeps runner projects</description>
 
     <organization>
@@ -46,9 +46,9 @@
             <distribution>manual</distribution>
       </license>
     </licenses>
-    
+
     <developers>
-   
+
         <developer>
           <id>ianmoore</id>
           <name>Ian Moore</name>
@@ -76,7 +76,7 @@
             <role>developer</role>
           </roles>
         </developer>
-  
+
        <developer>
           <id>stuartforbes</id>
           <name>Stu Forbes</name>
@@ -86,7 +86,7 @@
           </roles>
         </developer>
 
- 
+
         <developer>
           <id>rickybarefield</id>
           <name>Ricky Barefield</name>
@@ -95,7 +95,7 @@
             <role>developer</role>
           </roles>
        </developer>
-       
+
        <developer>
           <id>beercan1989</id>
           <name>James Bacon</name>
@@ -105,7 +105,7 @@
             <role>developer</role>
           </roles>
         </developer>
-	  
+
     </developers>
 
 	<contributors>
@@ -119,7 +119,7 @@
 
     <dependencyManagement>
       <dependencies>
-       
+
         <dependency>
           <groupId>${project.groupId}</groupId>
           <artifactId>substeps-runner-common</artifactId>
@@ -153,7 +153,7 @@
       </dependencies>
 
     </dependencyManagement>
-     
+
 
     <dependencies>
 
@@ -208,8 +208,8 @@
             <groupId>net.sourceforge.findbugs</groupId>
             <artifactId>annotations</artifactId>
             <version>1.3.2</version>
-        </dependency> 
-	
+        </dependency>
+
 
         <dependency>
           <groupId>${project.groupId}</groupId>
@@ -217,12 +217,12 @@
           <version>1.1.3-SNAPSHOT</version>
           <type>test-jar</type>
           <scope>test</scope>
-        </dependency>     
+        </dependency>
     </dependencies>
 
     <build>
 
-        <finalName>${project.artifactId}</finalName>        
+        <finalName>${project.artifactId}</finalName>
         <plugins>
 
             <plugin>
@@ -248,18 +248,18 @@
                 </configuration>
 
             </plugin>
-            
+
         </plugins>
     </build>
 
 
 
     <profiles>
-        
-	<!-- A profile used by default for internal dev, using the repos set up in proeprties defined above, rather than the OSS nexus repos -->    
+
+	<!-- A profile used by default for internal dev, using the repos set up in proeprties defined above, rather than the OSS nexus repos -->
         <profile>
             <id>internalDev</id>
-             
+
             <distributionManagement>
                 <snapshotRepository>
                     <id>${nexus.snapshot.artifacts}</id>
@@ -273,7 +273,7 @@
                     <url>${nexus.releases.url}</url>
                 </repository>
             </distributionManagement>
-            
+
         </profile>
 
     </profiles>
@@ -284,5 +284,5 @@
         <url>${substeps-runner.scm.url}</url>
       <tag>HEAD</tag>
   </scm>
-   
+
 </project>
