--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.technophobia.substeps</groupId>
         <artifactId>substeps-runner-parent</artifactId>
-            <version>1.1.3</version>
+            <version>1.1.4-SNAPSHOT</version>
     </parent>
 
     <name>SubSteps Runner Common</name>
