--- a/Maven/pom.xml
+++ b/Maven/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.technophobia.substeps</groupId>
 		<artifactId>substeps-runner-parent</artifactId>
-			<version>1.1.3</version>
+			<version>1.1.4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
